--- a/source/less/blocks/form-list.less
+++ b/source/less/blocks/form-list.less
@@ -1,14 +1,10 @@
-.form-list{
-  width: 320px;
-  margin: 0 auto;
-}
-
 @media (min-width: @tablet-width){
   .form-list{
     display: flex;
     flex-wrap: wrap;
-    width: 768px;
-    margin: 0 auto;
+    width: 648px;
+    margin-left: auto;
+    margin-right: auto;
   }
 }
 
@@ -16,7 +12,6 @@
   .form-list{
     display: flex;
     flex-wrap: wrap;
-    width: 1200px;
-    margin: 0 auto;
+    width: 960px;
   }
 }
