--- a/source/less/blocks/media-post.less
+++ b/source/less/blocks/media-post.less
@@ -1,46 +1,35 @@
 .media-post{
-  width: 320px;
-  margin-left: auto;
-  margin-right: auto;
   padding-top: 38px;
   padding-bottom: 34px;
+  padding-left: 20px;
+  padding-left: 20px;
+  text-align: center;
 }
 
 .media-post__title{
-  width: 132px;
   margin-top: 0;
   margin-bottom: 25px;
-  margin-left: auto;
-  margin-right: auto;
   font-size: 18px;
   line-height: 26px;
   font-weight: 700;
-  text-transform: uppercase;
 }
 
 .media-post__text{
-  width: 275px;
   margin-top: 0;
   margin-bottom: 0;
-  margin-left: auto;
-  margin-right: auto;
   line-height: 24px;
-  text-align: center;
-  text-transform: uppercase;
 }
 
 @media (min-width: @tablet-width){
   .media-post{
-    width: 768px;
+    padding-left: 165px;
+    padding-right: 165px;
+    text-align: center;
+    box-sizing: border-box;
   }
   
   .media-post__title{
-    width: 213px;
     font-size: 30px;
-  }
-  
-  .media-post__text{
-    width: 433px;
   }
 }
 
