--- a/source/less/blocks/review.less
+++ b/source/less/blocks/review.less
@@ -1,53 +1,42 @@
 .review{
-  width: 320px;
-  margin: 0 auto;
   padding-top: 39px;
   padding-bottom: 23px;
+  padding-left: 23px;
+  padding-right: 20px;
+  text-align: center;
 }
 
 .review__title{
-  width: 205px;
   margin-top: 0;
-  margin-bottom: 28px;
-  margin-left: auto;
-  margin-right: auto;
+  margin-bottom: 26px;
   font-size: 18px;
   line-height: 26px;
   font-weight: 700;
-  text-align: center;
-  text-transform: uppercase;
 }
 
 .review__text{
-  width: 280px;
-  margin: 0 auto;
+  margin: 0;
   line-height: 24px;
-  text-align: center;
-  text-transform: uppercase;
 }
 
 @media (min-width: @tablet-width){
   .review{
     order: -6;
-    width: 768px;
-    margin-left: auto;
-    margin-right: auto;
+    padding-top: 75px;
+    padding-left: 112px;
+    padding-right: 112px;
   }
   
   .review__title{
-    width: 325px;
+    margin-bottom: 30px;
     font-size: 30px;
-  }
-  
-  .review__text{
-    width: 445px;
   }
 }
 
 @media (min-width: @desctop-width){
   .review{
-    width: 1200px;
-    margin-left: auto;
-    margin-right: auto;
+    padding-top: 110px;
+    padding-left: 270px;
+    padding-right: 270px;
   }
 }
