--- a/source/less/global/scaffolding.less
+++ b/source/less/global/scaffolding.less
@@ -22,17 +22,19 @@ body{
   line-height: 21px;
   font-weight: 400;
   background-color: @main-color;
+  text-transform: uppercase;
 }
 
 .btn-item{
   display: block;
-  width: 280px;
+  width: 100%;
   margin-left: auto;
   margin-right: auto;
   padding-top: 16px;
   padding-bottom: 15px;
   padding-left: 10px;
   padding-right: 10px;
+  font-family: inherit;
   font-size: 21px;
   line-height: 26px;
   font-weight: 700;
@@ -42,6 +44,7 @@ body{
   text-decoration: none;
   text-transform: uppercase;
   border: 0;
+  box-sizing: border-box;
 }
 
 .visually-hidden {
