--- a/source/less/style.less
+++ b/source/less/style.less
@@ -8,7 +8,9 @@
 @import "blocks/content.less";
 @import "blocks/failur-popup.less";
 @import "blocks/form-list.less";
+@import "blocks/form-main.less";
 @import "blocks/gallery.less";
+@import "blocks/main-index.less";
 @import "blocks/main-nav.less";
 @import "blocks/map.less";
 @import "blocks/media-post.less";
@@ -26,4 +28,5 @@
 @import "blocks/social.less";
 @import "blocks/success-popup.less";
 @import "blocks/title-content.less";
+@import "blocks/total-wrapper.less";
 
