--- a/source/less/blocks/check-list.less
+++ b/source/less/blocks/check-list.less
@@ -1,28 +1,23 @@
 .check-list{
-  width: 320px;
-  margin: 0 auto;
   padding-top: 24px;
   padding-bottom: 25px;
+  padding-left: 20px;
+  padding-right: 20px;
 }
 
 .check-list__title{
-  width: 243px;
   margin-top: 0;
   margin-bottom: 17px;
-  margin-left: auto;
-  margin-right: auto;
   font-size: 18px;
   line-height: 26px;
   font-weight: 700;
   text-align: center;
-  text-transform: uppercase;
 }
 
 .check-list__label{
   display: flex;
   flex-direction: row;
   align-items: center;
-  margin-left: 20px;
   font-size: 18px;
   line-height: 26px;
   font-weight: 700;
@@ -48,41 +43,76 @@
 
 @media (min-width: @tablet-width){
   .check-list{
+    position: relative;
     order: -2;
-    width: 768px;
+    width: 648px;
+    padding-top: 27px;
+    padding-left: 0;
+    padding-right: 0;
+    box-sizing: border-box;
+  }
+  
+  .check-list::before{
+    position: absolute;
+    top: 17%;
+    content: "";
+    width: 125px;
+    height: 1px;
+    background-color: #dbdbdb;
+  }
+
+  .check-list::after{
+    position: absolute;
+    top: 17%;
+    right: 0;
+    content: "";
+    width: 125px;
+    height: 1px;
+    background-color: #dbdbdb;
   }
   
   .check-list__title{
-    width: 284px;
+    width: 285px;
+    margin-bottom: 40px;
+    margin-left: auto;
+    margin-right: auto;
     font-size: 21px;
+    text-align: center;
   }
   
   .check-list__wrapper{
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
-    width: 465px;
-    margin-left: auto;
-    margin-right: auto;
+    padding-left: 95px;
+    padding-right: 90px;
   }
   
   .check-list__label{
     width: 205px;
     margin-bottom: 24px;
+    text-transform: none;
   }
 }
 
 @media (min-width: @desctop-width){
   .check-list{
-    width: 1200px;
-    margin-left: auto;
-    margin-right: auto;
+    width: 100%;
+  }
+  
+  .check-list::before{
+    top: 24%;
+    width: 280px;
+  }
+
+  .check-list::after{
+    top: 24%;
+    right: 0;
+    width: 280px;
   }
   
   .check-list__wrapper{
-    width: 963px;
-    margin-left: auto;
-    margin-right: auto;
+    padding: 0;
   }
   
   .check-list__label{
