--- a/source/less/blocks/comment.less
+++ b/source/less/blocks/comment.less
@@ -1,37 +1,32 @@
 .comment{
-  width: 320px;
   margin-bottom: 45px;
-  margin-left: auto;
-  margin-right: auto;
   padding-top: 20px;
+  padding-bottom: 0;
+  padding-left: 20px;
+  padding-right: 20px;
 }
 
 .comment__title{
-  width: 218px;
   margin-top: 0;
   margin-bottom: 18px;
-  margin-left: auto;
-  margin-right: auto;
   font-size: 18px;
   line-height: 26px;
   font-weight: 700;
   text-align: center;
-  text-transform: uppercase;
 }
 
 .comment__label{
   display: block;
-  width: 280px;
-  margin: 0 auto;
 }
 
 .comment__textarea{
-  width: 280px;
+  width: 100%;
   min-height: 160px;
   margin-bottom: 47px;
   padding-top: 15px;
   padding-left: 21px;
   padding-right: 20px;
+  font-family: inherit;
   font-size: 18px;
   line-height: 26px;
   font-weight: 700;
@@ -45,40 +40,66 @@
 }
 
 .comment__button{
-  width: 280px;
+  max-width: 280px;
 }
 
 @media (min-width: @tablet-width){
   .comment{
-    width: 768px;
+    position: relative;
+    width: 648px;
+    margin-bottom: 70px;
+    padding-top: 29px;
+    padding-left: 0;
+    padding-right: 0;
+    box-sizing: border-box;
+  }
+  
+  .comment::before{
+    position: absolute;
+    top: 11%;
+    content: "";
+    width: 125px;
+    height: 1px;
+    background-color: #dbdbdb;
+  }
+
+  .comment::after{
+    position: absolute;
+    top: 11%;
+    right: 0;
+    content: "";
+    width: 125px;
+    height: 1px;
+    background-color: #dbdbdb;
   }
   
   .comment__title{
-    width: 255px;
+    margin-bottom: 58px;
     font-size: 21px;
+    text-align: center;
   }
   
   .comment__label{
-    width: 650px;
+    width: 100%;
   }
   
   .comment__textarea{
-    width: 650px;
+    width: 100%;
+    margin-bottom: 52px;
   }
   
   .comment__wrapper{
     display: flex;
     flex-direction: row-reverse;
     justify-content: space-between;
-    width: 650px;
-    margin-left: auto;
-    margin-right: auto;
+    width: 100%;
   }
   
   .comment__text{
     display: block;
     align-self: center;
     width: 163px;
+    margin: 0;
     text-transform: uppercase;
   }
   
@@ -89,7 +110,20 @@
 
 @media (min-width: @desctop-width){
   .comment{
-    width: 1200px;
+    width: auto;
+    padding-top: 20px;
+    margin-bottom: 75px;
+  }
+  
+  .comment::before{
+    top: 9%;
+    width: 280px;
+  }
+
+  .comment::after{
+    top: 9%;
+    right: 0;
+    width: 280px;
   }
   
   .comment__label{
@@ -100,12 +134,6 @@
   
   .comment__textarea{
     width: 953px;
-  }
-  
-  .comment__wrapper{
-    width: 953px;
-    margin-left: auto;
-    margin-right: auto;
   }
   
   .comment__button{
