--- a/source/less/blocks/gallery.less
+++ b/source/less/blocks/gallery.less
@@ -1,6 +1,6 @@
 .gallery{
   width: 320px;
-  margin-top: 55px;
+  margin-top: -25px;
   margin-bottom: 45px;
   margin-left: auto;
   margin-right: auto;
@@ -9,6 +9,7 @@
 @media (min-width: @tablet-width){
   .gallery{
     width: 768px;
+    margin-top: 0;
     margin-left: auto;
     margin-right: auto;
   } 
