--- a/source/less/blocks/main-index.less
+++ b/source/less/blocks/main-index.less
@@ -5,8 +5,19 @@
   margin-right: auto;
 }
 
-@media (min-width:@tablet-width){
-  width: 768px;
-  margin-left: auto;
-  margin-right: auto;
+@media (min-width: @tablet-width){
+  .main-index{
+    width: 768px;
+    margin-top: 0;
+    margin-left: auto;
+    margin-right: auto;
+  }
+}
+
+@media (min-width: @desctop-width){
+  .main-index{
+    width: 1200px;
+    margin-left: auto;
+    margin-right: auto;
+  }
 }
