--- a/source/less/blocks/order.less
+++ b/source/less/blocks/order.less
@@ -1,32 +1,26 @@
 .order{
-  width: 320px;
+  width: 280px;
   margin: 0 auto;
   padding-top: 30px;
   padding-bottom: 49px;
+  padding-left: 20px;
+  padding-right: 20px;
 }
 
 .order__title{
-  width: 218px;
   margin-top: 0;
   margin-bottom: 18px;
-  margin-left: auto;
-  margin-right: auto;
   font-size: 21px;
   line-height: 26px;
   font-weight: 700;
   text-align: center;
-  text-transform: uppercase;
 }
 
 .order__text{
-  width: 265px;
   margin-top: 0;
   margin-bottom: 35px;
-  margin-left: auto;
-  margin-right: auto;
   line-height: 24px;
   text-align: center;
-  text-transform: uppercase;
 }
 
 .order__button{
@@ -38,17 +32,18 @@
     width: 768px;
     padding-top: 55px;
     padding-bottom: 57px;
+    padding-left: 150px;
+    padding-right: 150px;
+    box-sizing: border-box;
   }
   
   .order__title{
-    width: 305px;
     margin-bottom: 32px;
     font-size: 30px;
     line-height: 26px;
   }
   
   .order__text{
-    width: 440px;
     margin-bottom: 42px;
   }
   
@@ -61,6 +56,9 @@
   .order{
     width: 1200px;
     padding-bottom: 65px;
+    padding-left: 371px;
+    padding-right: 371px;
+    box-sizing: border-box;
   }
   
   .order__text{
