--- a/source/less/blocks/page-footer.less
+++ b/source/less/blocks/page-footer.less
@@ -3,40 +3,45 @@
   flex-direction: column;
   width: 320px;
   margin: 0 auto;
-  padding-top: 8px;
+  padding-top: 36px;
   padding-bottom: 28px;
+  text-align: center;
 }
 
 .page-footer__hashtag{
-  width: 140px;
+  margin-top: 0;
   margin-bottom: 37px;
-  margin-left: auto;
-  margin-right: auto;
   font-size: 21px;
   line-height: 26px;
   font-weight: 700;
-  text-transform: uppercase;
 }
 
 @media (min-width: @tablet-width){
   .page-footer{
     display: flex;
     flex-direction: row;
+    align-items: center;
     width: 768px;
     padding-top: 25px;
     padding-bottom: 20px;
   }
   
   .page-footer__hashtag{
-    height: 20px;
-    margin-top: 22px;
+    width: 33.333333%;
     margin-bottom: 0;
+    padding-left: 60px;
+    text-align: left;
+    box-sizing: border-box;
   }
 }
 
 @media (min-width: @desctop-width){
   .page-footer{
     width: 1200px;
+  }
+  
+  .page-footer__hashtag{
+    padding-left: 132px;
   }
 }
 
