--- a/source/less/blocks/post.less
+++ b/source/less/blocks/post.less
@@ -1,18 +1,12 @@
 .post{
-  width: 320px;
-  margin: 0 auto;
   background-color: @second-color;
 }
 
 .post__wrapper{
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  width: 280px;
-  min-height: 108px;
-  margin: 0 auto;
   padding-top: 55px;
   padding-bottom: 40px;
+  padding-left: 20px;
+  padding-right: 20px;
 }
 
 .post__wrapper--height{
@@ -27,7 +21,6 @@
   font-weight: 700;
   color: @main-color;
   text-align: center;
-  text-transform: uppercase;
 }
 
 .post__index{
@@ -38,10 +31,10 @@
 }
 
 .post__text{
+  margin-top: 14px;
   margin-bottom: 0;
   color: @main-color;
   text-align: center;
-  text-transform: uppercase;
 }
 
 
@@ -60,40 +53,40 @@
 
   .post__wrapper{
     width: 256px;
-    min-height: 165px;
     margin-left: 0;
     margin-right: 0;
+    padding-left: 43px;
+    padding-right: 43px;
+    box-sizing: border-box;
   }
 
   .post__title{
-    width: 125px;
     margin-top: 0;
-    margin-bottom: 0;
-    margin-left: auto;
-    margin-right: auto;
+    margin-bottom: 10px;
     font-size: 21px;
+  }
+  
+  .post__index{
+    margin-bottom: 20px;
   }
 
   .post__text{
-    width: 165px;
-    margin-bottom: 5px;
-    margin-left: auto;
-    margin-right: auto;
+    margin-top: 0;
   }
   
   .post__image{
     position: relative;
-    width: 512px;
+    flex-grow: 1;
   }
   
   .post__image-city{
     position: absolute;
-    width: 512px;
+    width: 100%
   }
   
   .post__image-bridge{
     position: absolute;
-    width: 512px;
+    width: 100%;
   }
 }
 
@@ -103,15 +96,17 @@
   }
   
   .post__wrapper{
-    width: 280px;
+    width: 400px;
     padding-left: 60px;
     padding-right: 60px;
+    box-sizing: border-box;
   }
   
-  .post__text{
-    width: 270px;
+  .post__title{
+    padding-left: 57px;
+    padding-right: 58px;
   }
-  
+
   .post__image-city{
     display: inline-block;
   }
