--- a/source/less/blocks/request.less
+++ b/source/less/blocks/request.less
@@ -1,16 +1,13 @@
 .request{
-  width: 320px;
-  margin: 0 auto;
   padding-top: 13px;
   padding-bottom: 25px;
+  padding-left: 20px;
+  padding-right: 20px;
 }
 
 .request__title{
-  width: 145px;
   margin-top: 0;
   margin-bottom: 22px;
-  margin-left: auto;
-  margin-right: auto;
   font-size: 18px;
   line-height: 26px;
   font-weight: 700;
@@ -18,14 +15,8 @@
   text-transform: uppercase;
 }
 
-.request__wrapper{
-  width: 280px;
-  margin: 0 auto;
-}
-
 .request__label{
   display: flex;
-  width: 280px;
 }
 
 .request__label:not(:last-child){
@@ -41,16 +32,37 @@
 
 .request__input{
   flex-grow: 1;
-  width: 181px;
+  width: 100%;
+  padding-left: 25px;
+  font-family: inherit;
 }
 
 @media (min-width: @tablet-width){
   .request{
     order: -4;
+    width: 50%;
+    padding-top: 52px;
+    padding-bottom: 0;
+    padding-left: 56px;
+    padding-right: 0;
+    box-sizing: border-box;
   }
   
   .request__title{
+    margin-bottom: 56px;
     font-size: 21px;
+    text-align: left;
+  }
+}
+
+@media (min-width: @desctop-width){
+  .request{
+    padding-top: 37px;
+    padding-left: 76px;
+  }
+  
+  .request__title{
+    padding-left: 5px;
   }
 }
 
