--- a/source/less/blocks/social.less
+++ b/source/less/blocks/social.less
@@ -1,11 +1,7 @@
 .social{
   display: flex;
-  justify-content: space-between;
-  width: 156px;
-  margin-top: -2px;
-  margin-bottom: 20px;
-  margin-left: auto;
-  margin-right: auto;
+  justify-content: center;
+  margin-bottom: 43px;
 }
 
 .social__item{
@@ -15,6 +11,10 @@
   margin: 0;
   color: transparent;
   background-color: @second-color;
+}
+
+.social__item:not(:last-child){
+  margin-right: 6px;
 }
 
 .social--twitter{
@@ -37,8 +37,7 @@
 
 @media (min-width: @tablet-width){
   .social{
-    height: 50px;
-    margin-top: 12px;
+    width: 33.333333%;
     margin-bottom: 0;
   }
 }
