Внес еще изменения в сетки

--- a/source/less/blocks/attributes.less
+++ b/source/less/blocks/attributes.less
@@ -1,6 +1,6 @@
 .attributes{
   padding-top: 35px;
-  padding-bottom: 23px;
+  padding-bottom: 37px;
 }
 
 .attributes__item{
@@ -16,7 +16,7 @@
 .attributes__img{
   position: absolute;
   top: -10px;
-  left: -31px;
+  left: 0;
   width: 39px;
   height: 39px;
   background-repeat: no-repeat;
@@ -31,7 +31,7 @@
 .attributes__img--gift{
   background-image: url(../../img/icon-gift.svg);
 }
-  
+
 .attributes__img--food{
   background-image: url(../../img/icon-burger.svg);
 }
@@ -55,29 +55,29 @@
     flex-direction: row;
     margin-bottom: 0;
     padding-top: 57px;
-    padding-bottom: 47px;
+    padding-bottom: 61px;
     text-align: center;
   }
-  
+
   .attributes__item{
     width: 33.333333%;
     padding-left: 45px;
     padding-right: 45px;
     box-sizing: border-box;
   }
-  
+
   .attributes__item--house{
     order: -2;
   }
-  
+
   .attributes__item--food{
     order: -1;
   }
-  
+
   .attributes__item:not(:last-child){
     margin-bottom: 0;
   }
-  
+
   .attributes__img{
     position: static;
     width: 80px;
@@ -88,19 +88,19 @@
     background-repeat: no-repeat;
     background-position: center;
   }
-  
+
   .attributes__img--house{
     background-image: url(../../img/icon-house.svg);
   }
-  
+
   .attributes__img--gift{
     background-image: url(../../img/icon-gift.svg);
   }
-  
+
   .attributes__img--food{
     background-image: url(../../img/icon-burger.svg);
   }
-  
+
   .attributes__title{
     margin-bottom: 21px;
     margin-left: 0;
@@ -111,6 +111,6 @@
 
 @media (min-width: @desctop-width){
   .attributes{
-    padding-bottom: 68px;
+    padding-bottom: 82px;
   }
 }
