--- a/source/less/blocks/check-list.less
+++ b/source/less/blocks/check-list.less
@@ -51,7 +51,7 @@
     padding-right: 0;
     box-sizing: border-box;
   }
-  
+
   .check-list::before{
     position: absolute;
     top: 17%;
@@ -70,7 +70,7 @@
     height: 1px;
     background-color: #dbdbdb;
   }
-  
+
   .check-list__title{
     width: 285px;
     margin-bottom: 40px;
@@ -79,7 +79,7 @@
     font-size: 21px;
     text-align: center;
   }
-  
+
   .check-list__wrapper{
     display: flex;
     flex-wrap: wrap;
@@ -87,7 +87,7 @@
     padding-left: 95px;
     padding-right: 90px;
   }
-  
+
   .check-list__label{
     width: 205px;
     margin-bottom: 24px;
@@ -98,8 +98,9 @@
 @media (min-width: @desctop-width){
   .check-list{
     width: 100%;
+    padding-top: 29px;
   }
-  
+
   .check-list::before{
     top: 24%;
     width: 280px;
@@ -110,11 +111,11 @@
     right: 0;
     width: 280px;
   }
-  
+
   .check-list__wrapper{
     padding: 0;
   }
-  
+
   .check-list__label{
     margin-left: 0;
   }
