--- a/source/less/blocks/main-nav.less
+++ b/source/less/blocks/main-nav.less
@@ -11,6 +11,7 @@
 }
 
 .main-nav__list{
+  margin: 0;
   padding: 0;
 }
 
@@ -37,27 +38,27 @@
     width: 768px;
     background-color: @main-color;
   }
-  
+
   .main-nav__toggle{
     display: none;
   }
-  
+
   .main-nav__list{
     display: flex;
     justify-content: space-around;
     width: 768px;
     margin: 0;
   }
-  
+
   .main-nav__item{
     width: 20%;
     background-color: @main-color;
   }
-  
+
   .main-nav__item:nth-child(2){
     margin-right: auto;
   }
-  
+
   .main-nav__link{
     font-size: 14px;
     color: @title-color;
@@ -68,13 +69,13 @@
   .main-nav{
     width: 1200px;
   }
-  
+
   .main-nav__list{
     display: flex;
     justify-content: space-around;
     width: 1200px;
   }
-  
+
   .main-nav__link{
     font-size: 14px;
   }
