--- a/source/less/blocks/media-post.less
+++ b/source/less/blocks/media-post.less
@@ -22,13 +22,15 @@
 
 @media (min-width: @tablet-width){
   .media-post{
+    padding-top: 75px;
     padding-left: 165px;
     padding-right: 165px;
     text-align: center;
     box-sizing: border-box;
   }
-  
+
   .media-post__title{
+    margin-bottom: 30px;
     font-size: 30px;
   }
 }
@@ -37,8 +39,10 @@
   .media-post{
     width: 1200px;
     padding-bottom: 70px;
+    padding-left: 380px;
+    padding-right: 380px;
   }
-  
+
   .media-post__title{
     margin-bottom: 30px;
   }
