--- a/source/less/blocks/order.less
+++ b/source/less/blocks/order.less
@@ -1,7 +1,7 @@
 .order{
   width: 280px;
   margin: 0 auto;
-  padding-top: 30px;
+  padding-top: 25px;
   padding-bottom: 49px;
   padding-left: 20px;
   padding-right: 20px;
@@ -9,7 +9,7 @@
 
 .order__title{
   margin-top: 0;
-  margin-bottom: 18px;
+  margin-bottom: 19px;
   font-size: 21px;
   line-height: 26px;
   font-weight: 700;
@@ -30,25 +30,26 @@
 @media (min-width: @tablet-width){
   .order{
     width: 768px;
-    padding-top: 55px;
+    padding-top: 60px;
     padding-bottom: 57px;
     padding-left: 150px;
     padding-right: 150px;
     box-sizing: border-box;
   }
-  
+
   .order__title{
-    margin-bottom: 32px;
+    margin-bottom: 30px;
     font-size: 30px;
     line-height: 26px;
   }
-  
+
   .order__text{
     margin-bottom: 42px;
   }
-  
+
   .order__button{
-    width: 438px;
+    width: 458px;
+    box-sizing: border-box;
   }
 }
 
@@ -60,7 +61,7 @@
     padding-right: 371px;
     box-sizing: border-box;
   }
-  
+
   .order__text{
     margin-bottom: 47px;
   }
