--- a/source/less/blocks/comment.less
+++ b/source/less/blocks/comment.less
@@ -1,5 +1,5 @@
 .comment{
-  margin-bottom: 45px;
+  margin-bottom: 36px;
   padding-top: 20px;
   padding-bottom: 0;
   padding-left: 20px;
@@ -22,7 +22,7 @@
 .comment__textarea{
   width: 100%;
   min-height: 160px;
-  margin-bottom: 47px;
+  margin-bottom: 44px;
   padding-top: 15px;
   padding-left: 21px;
   padding-right: 20px;
@@ -40,7 +40,7 @@
 }
 
 .comment__button{
-  max-width: 280px;
+  width: 280px;
 }
 
 @media (min-width: @tablet-width){
@@ -53,7 +53,7 @@
     padding-right: 0;
     box-sizing: border-box;
   }
-  
+
   .comment::before{
     position: absolute;
     top: 11%;
@@ -72,29 +72,29 @@
     height: 1px;
     background-color: #dbdbdb;
   }
-  
+
   .comment__title{
     margin-bottom: 58px;
     font-size: 21px;
     text-align: center;
   }
-  
+
   .comment__label{
     width: 100%;
   }
-  
+
   .comment__textarea{
     width: 100%;
     margin-bottom: 52px;
   }
-  
+
   .comment__wrapper{
     display: flex;
     flex-direction: row-reverse;
     justify-content: space-between;
     width: 100%;
   }
-  
+
   .comment__text{
     display: block;
     align-self: center;
@@ -102,7 +102,7 @@
     margin: 0;
     text-transform: uppercase;
   }
-  
+
   .comment__button{
     margin: 0;
   }
@@ -111,31 +111,31 @@
 @media (min-width: @desctop-width){
   .comment{
     width: auto;
-    padding-top: 20px;
-    margin-bottom: 75px;
+    padding-top: 19px;
+    margin-bottom: 66px;
   }
-  
+
   .comment::before{
-    top: 9%;
+    top: 8%;
     width: 280px;
   }
 
   .comment::after{
-    top: 9%;
+    top: 8%;
     right: 0;
     width: 280px;
   }
-  
+
   .comment__label{
     width: 953px;
     margin-left: auto;
     margin-right: auto;
   }
-  
+
   .comment__textarea{
     width: 953px;
   }
-  
+
   .comment__button{
     width: 480px;
   }
