--- a/source/less/blocks/post.less
+++ b/source/less/blocks/post.less
@@ -3,7 +3,7 @@
 }
 
 .post__wrapper{
-  padding-top: 55px;
+  padding-top: 57px;
   padding-bottom: 40px;
   padding-left: 20px;
   padding-right: 20px;
@@ -42,10 +42,9 @@
   .post{
     display: flex;
     width: 768px;
-    min-height: 256px;
     overflow: hidden;
   }
-  
+
   .post--bridge{
     display: flex;
     flex-direction: row-reverse;
@@ -55,17 +54,22 @@
     width: 256px;
     margin-left: 0;
     margin-right: 0;
+    padding-top: 45px;
+    padding-bottom: 45px;
     padding-left: 43px;
     padding-right: 43px;
     box-sizing: border-box;
   }
 
   .post__title{
+    width: 158px;
     margin-top: 0;
     margin-bottom: 10px;
+    margin-left: auto;
+    margin-right: auto;
     font-size: 21px;
   }
-  
+
   .post__index{
     margin-bottom: 20px;
   }
@@ -73,17 +77,17 @@
   .post__text{
     margin-top: 0;
   }
-  
+
   .post__image{
     position: relative;
     flex-grow: 1;
   }
-  
+
   .post__image-city{
     position: absolute;
     width: 100%
   }
-  
+
   .post__image-bridge{
     position: absolute;
     width: 100%;
@@ -94,23 +98,20 @@
   .post{
     width: 1200px;
   }
-  
+
   .post__wrapper{
     width: 400px;
+    padding-top: 55px;
+    padding-bottom: 56px;
     padding-left: 60px;
     padding-right: 60px;
     box-sizing: border-box;
-  }
-  
-  .post__title{
-    padding-left: 57px;
-    padding-right: 58px;
   }
 
   .post__image-city{
     display: inline-block;
   }
-  
+
   .post__image-bridge{
     display: inline-block;
   }
