--- a/source/less/blocks/characterization.less
+++ b/source/less/blocks/characterization.less
@@ -53,7 +53,7 @@
   .characterization{
     order: -5;
     width: 50%;
-    padding-top: 52px;
+    padding-top: 0;
     padding-bottom: 0;
     padding-left: 0;
     padding-right: 50px;
