--- a/source/less/blocks/personal-data.less
+++ b/source/less/blocks/personal-data.less
@@ -42,7 +42,7 @@
   .personal-data{
     position: relative;
     order: -3;
-    width: 648px;
+    width: 100%;
     padding-top: 69px;
     padding-left: 0;
     padding-right: 0;
@@ -72,10 +72,6 @@
     margin-bottom: 24px;
     font-size: 21px;
     text-align: center;
-  }
-
-  .personal-data__wrapper{
-    width: 650px;
   }
 
   .personal-data__label{
