--- a/source/less/blocks/main-nav.less
+++ b/source/less/blocks/main-nav.less
@@ -1,7 +1,6 @@
 .main-nav{
   position: relative;
-  width: 320px;
-  margin: 0 auto;
+  width: 100%;
   background-color: @second-color;
 }
 
@@ -34,8 +33,7 @@
 
 @media (min-width: @tablet-width){
   .main-nav{
-    position: relative;
-    width: 768px;
+    width: 100%;
     background-color: @main-color;
   }
 
@@ -66,10 +64,6 @@
 }
 
 @media (min-width:@desctop-width){
-  .main-nav{
-    width: 1200px;
-  }
-
   .main-nav__list{
     display: flex;
     justify-content: space-around;
