--- a/source/less/blocks/map.less
+++ b/source/less/blocks/map.less
@@ -1,27 +1,5 @@
-.map{
-  width: 320px;
-  margin: 0 auto;
-}
-
 .map__img{
-  width: 320px;
-  height: 350px;
+  width: 100%;
+  height: auto;
 }
 
-@media (min-width: @tablet-width){
-  .map{
-    width: 768px;
-    height: 350px
-  }
-  
-  .map__img{
-    width: 100%;
-    height: 100%;
-  }
-}
-
-@media (min-width: @desctop-width){
-  .map{
-    width: 1200px;
-  }
-}
