--- a/source/less/blocks/media-post.less
+++ b/source/less/blocks/media-post.less
@@ -1,8 +1,8 @@
 .media-post{
   padding-top: 38px;
   padding-bottom: 34px;
-  padding-left: 20px;
-  padding-left: 20px;
+  padding-left: 23px;
+  padding-right: 23px;
   text-align: center;
 }
 
@@ -37,10 +37,10 @@
 
 @media (min-width: @desctop-width){
   .media-post{
-    width: 1200px;
+    max-width: 435px;
+    margin-left: auto;
+    margin-right: auto;
     padding-bottom: 70px;
-    padding-left: 380px;
-    padding-right: 380px;
   }
 
   .media-post__title{
