--- a/source/less/blocks/note.less
+++ b/source/less/blocks/note.less
@@ -3,6 +3,11 @@
   text-align: center;
 }
 
+.note__item{
+  padding-left: 30px;
+  padding-right: 30px;
+}
+
 .note__title{
   margin-top: 0;
   margin-bottom: 27px;
@@ -18,22 +23,30 @@
 }
 
 .note__wrapper{
- background: #f2f2f2;
+  position: relative;
   display: flex;
   justify-content: space-between;
   align-items: center;
-  position: relative;
-  padding: 24px 20px 22px;
+  margin-left: 20px;
+  margin-right: 20px;
+  padding-top: 24px;
+  padding-bottom: 22px;
+  padding-left: 20px;
+  padding-right: 20px;
+  background-color: #f2f2f2;
   box-sizing: border-box;
 }
 
 .note__player{
-  background: rgba(0, 0, 0, 0.2);
-  padding: 22px 22px 20px;
   position: absolute;
-  left: 20px;
-  right: 20px;
+  left: 0;
+  right: 0;
   bottom: 100%;
+  padding-top: 22px;
+  padding-bottom: 20px;
+  padding-left: 22px;
+  padding-right: 22px;
+  background-color: rgba(0, 0, 0, 0.6);
 }
 
 .note__player-scale{
@@ -98,11 +111,10 @@
 }
 
 @media (min-width: @tablet-width){
-  .note{
-    max-width: 768px;
-  }
-
   .note__item{
+    max-width: 440px;
+    margin-left: auto;
+    margin-right: auto;
     padding-left: 165px;
     padding-right: 165px;
     text-align: center;
@@ -132,11 +144,15 @@
   }
 
   .note__wrapper{
-    padding: 35px 41px 38px 35px;
     position: absolute;
     bottom: 0;
-    background: rgba(0, 0, 0, 0.2);
     width: 100%;
+    margin: 0;
+    padding-top: 35px;
+    padding-bottom: 38px;
+    padding-left: 35px;
+    padding-right: 41px;
+    background-color: rgba(0, 0, 0, 0.7);
   }
 
   .note__player{
