--- a/source/less/blocks/order.less
+++ b/source/less/blocks/order.less
@@ -1,6 +1,4 @@
 .order{
-  width: 280px;
-  margin: 0 auto;
   padding-top: 25px;
   padding-bottom: 49px;
   padding-left: 20px;
@@ -29,7 +27,6 @@
 
 @media (min-width: @tablet-width){
   .order{
-    width: 768px;
     padding-top: 60px;
     padding-bottom: 57px;
     padding-left: 150px;
@@ -55,10 +52,11 @@
 
 @media (min-width: @desctop-width){
   .order{
-    width: 1200px;
+    width: 100%;
+    max-width: 460px;
+    padding-left: 0;
+    padding-right: 0;
     padding-bottom: 65px;
-    padding-left: 371px;
-    padding-right: 371px;
     box-sizing: border-box;
   }
 
