--- a/source/less/blocks/review.less
+++ b/source/less/blocks/review.less
@@ -22,6 +22,7 @@
 @media (min-width: @tablet-width){
   .review{
     order: -6;
+    margin-bottom: 52px;
     padding-top: 75px;
     padding-left: 112px;
     padding-right: 112px;
@@ -35,8 +36,9 @@
 
 @media (min-width: @desctop-width){
   .review{
+    max-width: 420px;
+    margin-left: auto;
+    margin-right: auto;
     padding-top: 110px;
-    padding-left: 270px;
-    padding-right: 270px;
   }
 }
