--- a/source/less/blocks/title-content.less
+++ b/source/less/blocks/title-content.less
@@ -31,10 +31,14 @@
 .title-content::after{
   position: absolute;
   bottom: 0;
+  left: -1px;
+  right: -1px;
   content: "";
-  width: 320px;
-  height: 26px;
+  height: 27px;
   background-image: url(../../img/bg-intro-triangle-mobile.svg);
+  background-repeat: no-repeat;
+  background-position: 50% 50%;
+  background-size: cover;
 }
 
 
