--- a/source/less/blocks/media-post.less
+++ b/source/less/blocks/media-post.less
@@ -41,6 +41,8 @@
     margin-left: auto;
     margin-right: auto;
     padding-bottom: 70px;
+    padding-left: 0;
+    padding-right: 0;
   }
 
   .media-post__title{
