--- a/source/less/blocks/order.less
+++ b/source/less/blocks/order.less
@@ -54,6 +54,8 @@
   .order{
     width: 100%;
     max-width: 460px;
+    margin-left: auto;
+    margin-right: auto;
     padding-left: 0;
     padding-right: 0;
     padding-bottom: 65px;
