--- a/source/less/blocks/promo.less
+++ b/source/less/blocks/promo.less
@@ -61,6 +61,8 @@
 @media (min-width: @desctop-width){
   .promo{
     max-width: 700px;
+    margin-left: auto;
+    margin-right: auto;
     box-sizing: border-box;
   }
 }
