--- a/source/less/blocks/photo.less
+++ b/source/less/blocks/photo.less
@@ -3,7 +3,7 @@
 }
 
 .photo__item{
-  padding-top: 17px;
+  padding-top: 22px;
   padding-bottom: 22px;
   padding-left: 20px;
   padding-right: 20px;
@@ -11,7 +11,7 @@
 }
 
 .photo__comment{
-  padding-top: 11px;
+  padding-top: 15px;
   box-sizing: border-box;
 }
 
@@ -51,7 +51,7 @@
 @media (min-width: @tablet-width){
   .photo{
     padding-top: 35px;
-    margin-bottom: 25px;
+    margin-bottom: 31px;
   }
 
   .photo__wrapper{
@@ -72,6 +72,10 @@
 
   .photo__item--full{
     width: 100%;
+  }
+
+  .photo__item--full .photo__link{
+    height: 400px;
   }
 
   .photo__link{
