--- a/source/less/blocks/review.less
+++ b/source/less/blocks/review.less
@@ -37,6 +37,7 @@
 @media (min-width: @desctop-width){
   .review{
     max-width: 420px;
+    margin-bottom: 38px;
     margin-left: auto;
     margin-right: auto;
     padding-top: 110px;
