--- a/source/less/blocks/check-list.less
+++ b/source/less/blocks/check-list.less
@@ -21,6 +21,7 @@
   font-size: 18px;
   line-height: 26px;
   font-weight: 700;
+  text-transform: none;
 }
 
 .check-list__label:not(:last-child){
@@ -28,7 +29,6 @@
 }
 
 .check-list__label::before{
-  position: relative;
   content: "";
   display: inline-block;
   width: 56px;
@@ -38,16 +38,16 @@
   cursor: pointer;
 }
 
-.check-list__label::after{
+.check-list__input{
+  display: none;
+}
+
+.check-list__input:checked + .check-list__label::before{
   width: 20px;
   height: 10px;
   border-bottom: 2px solid #000000;
   border-left: 2px solid #000000;
   transform: rotate(-45deg);
-}
-
-.check-list__input{
-  display: none;
 }
 
 @media (min-width: @tablet-width){
