--- a/source/less/blocks/media-post.less
+++ b/source/less/blocks/media-post.less
@@ -1,6 +1,6 @@
 .media-post{
   padding-top: 38px;
-  padding-bottom: 34px;
+  padding-bottom: 28px;
   padding-left: 23px;
   padding-right: 23px;
   text-align: center;
@@ -8,7 +8,7 @@
 
 .media-post__title{
   margin-top: 0;
-  margin-bottom: 25px;
+  margin-bottom: 26px;
   font-size: 18px;
   line-height: 26px;
   font-weight: 700;
@@ -23,8 +23,9 @@
 @media (min-width: @tablet-width){
   .media-post{
     padding-top: 75px;
-    padding-left: 165px;
-    padding-right: 165px;
+    padding-bottom: 35px;
+    padding-left: 105px;
+    padding-right: 105px;
     text-align: center;
     box-sizing: border-box;
   }
@@ -40,7 +41,8 @@
     max-width: 435px;
     margin-left: auto;
     margin-right: auto;
-    padding-bottom: 70px;
+    padding-top: 112px;
+    padding-bottom: 35px;
     padding-left: 0;
     padding-right: 0;
   }
