--- a/source/less/blocks/note.less
+++ b/source/less/blocks/note.less
@@ -1,5 +1,5 @@
 .note{
-  padding-top: 39px;
+  padding-top: 32px;
   text-align: center;
 }
 
@@ -27,9 +27,9 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  margin-left: 20px;
+  margin-left: 25px;
   margin-right: 20px;
-  padding-top: 24px;
+  padding-top: 21px;
   padding-bottom: 22px;
   padding-left: 20px;
   padding-right: 20px;
@@ -57,6 +57,7 @@
 .note__player-toggle{
   position: absolute;
   top: 45%;
+  left: 20%;
   width: 9px;
   height: 9px;
   padding: 0;
@@ -115,8 +116,6 @@
     max-width: 440px;
     margin-left: auto;
     margin-right: auto;
-    padding-left: 165px;
-    padding-right: 165px;
     text-align: center;
   }
 
